installer/samples/networking/virtualservice-destination-rules-redis.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "redis-master"
spec:
  host: "mockserver-redis-ha-master-svc"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-master
spec:
  hosts:
  - mockserver-redis-ha-master-svc
  tcp:
  - route:
    - destination:
        host: mockserver-redis-ha-master-svc.soa-test.svc.cluster.local
        port:
          number: 6379
