installer/samples/networking/virtualservice-destinationrule-pilot.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: insecure-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "pilot.example.info"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pilot
spec:
  hosts:
  - "pilot.example.info"
  gateways:
  - insecure-gateway
  http:
  - route:
    - destination:
        host: istio-pilot.istio-system.svc.cluster.local
        port:
          number: 15010

---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: pilot
spec:
  host: "istio-pilot.istio-system.svc.cluster.local"
