installer/samples/networking/virtualservice-destinationrule-solr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: solr
spec:
  hosts:
  - "solr.example.info"
  gateways:
  - soa-gateway
  http:
  - route:
    - destination:
        host: ui-search.od-test.svc.cluster.local
        port:
          number: 8993

---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: solr
spec:
  host: "ui-search.od-test.svc.cluster.local"
